--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-
-        <shape
-            android:shape="rectangle">
-
-
+        <shape>
             <gradient
                 android:angle="0"
                 android:centerX="50%"
@@ -13,10 +9,6 @@
                 android:startColor="#FC5C7D"
                 android:endColor="#6A82FB"
                 android:type="linear" />
-
-            <corners
-                android:radius="35dp">
-            </corners>
         </shape>
     </item>
 </selector>
