--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#222327</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#00574B</color>
+    <color name="colorAccent">#EB618C</color>
 </resources>
